add JPA related
- use H2 in memory db as datasource
- add initialize sql script for start up data preparation
- Wrap JPA repository with Reactive implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 # /api-docs endpoint custom path
 springdoc.api-docs.path=/api-docs
+
+# defer initialization until schema.sql executed
+spring.jpa.defer-datasource-initialization=true
+# disable dll generation via hibernate as we using scripting schema.sql to create
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.platform=h2
